--- a/.github/workflows/master_waste-man.yml
+++ b/.github/workflows/master_waste-man.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy WAR app to Azure Web App - waste-man
+name: Build and deploy PHP app to Azure Web App - waste-man
 
 on:
   push:
@@ -16,19 +16,26 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Set up Java version
-        uses: actions/setup-java@v1
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
         with:
-          java-version: '8'
+          php-version: '7.4'
 
-      - name: Build with Maven
-        run: mvn clean install
+      - name: Check if composer.json exists
+        id: check_files
+        uses: andstor/file-existence-action@v1
+        with:
+          files: 'composer.json'
+
+      - name: Run composer install if composer.json exists
+        if: steps.check_files.outputs.files_exists == 'true'
+        run: composer validate --no-check-publish && composer install --prefer-dist --no-progress
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
         with:
-          name: java-app
-          path: '${{ github.workspace }}/target/*.war'
+          name: php-app
+          path: .
 
   deploy:
     runs-on: ubuntu-latest
@@ -41,13 +48,13 @@ jobs:
       - name: Download artifact from build job
         uses: actions/download-artifact@v2
         with:
-          name: java-app
+          name: php-app
 
-      - name: Deploy to Azure Web App
-        id: deploy-to-webapp
+      - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v2
+        id: deploy-to-webapp
         with:
           app-name: 'waste-man'
           slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_FFC0B696EB65417086DC6A36FAF1BA2A }}
-          package: '*.war'
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_F5DE66380AE94087AE9A1F3639E87BD8 }}
+          package: .
